# lib-version

./: .gitignore  LICENCE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml  test.yml
lib-version/: version_util.py
lib_version/: __init__.py  version_util.py
test/: test_version_util.py
