[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lib_version"
version = "0.1.0"
description = "Shared preprocessing logic"
authors = [
    { name = "remla25-team13" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy==1.26.4"
]

[tool.setuptools.packages.find]
where = ["."]